# geantCAD

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INSTALL_VTK.md  README.md  docker-compose.yml
app/include/: BuildRunDialog.hh  CameraControlWidget.hh  ClippingPlaneWidget.hh  CollapsibleGroupBox.hh  HistoryPanel.hh  Inspector.hh  MainWindow.hh  MaterialEditorDialog.hh  MeasurementTool.hh  Outliner.hh  OutputPanel.hh  ParticleGunPanel.hh  PhysicsPanel.hh  PreferencesDialog.hh  ProjectManagerPanel.hh  PropertiesPanel.hh  RightPanelContainer.hh  ShortcutsDialog.hh  SimulationConfigPanel.hh  ThemeManager.hh  Toolbar.hh  ViewCube.hh  Viewport3D.hh
app/resources/: resources.qrc
app/resources/stylesheets/: modern-dark.qss
app/src/: BuildRunDialog.cpp  CameraControlWidget.cpp  ClippingPlaneWidget.cpp  CollapsibleGroupBox.cpp  HistoryPanel.cpp  Inspector.cpp  MainWindow.cpp  MaterialEditorDialog.cpp  MeasurementTool.cpp  Outliner.cpp  OutputPanel.cpp  ParticleGunPanel.cpp  PhysicsPanel.cpp  PreferencesDialog.cpp  ProjectManagerPanel.cpp  PropertiesPanel.cpp  RightPanelContainer.cpp  ShortcutsDialog.cpp  SimulationConfigPanel.cpp  ThemeManager.cpp  Toolbar.cpp  ViewCube.cpp  Viewport3D.cpp  main.cpp
core/include/: Command.hh  CommandStack.hh  Material.hh  NistMaterialDatabase.hh  OutputConfig.hh  ParticleGunConfig.hh  PhysicsConfig.hh  SceneGraph.hh  Serialization.hh  Shape.hh  Transform.hh  VolumeNode.hh
core/src/: Command.cpp  CommandStack.cpp  Material.cpp  NistMaterialDatabase.cpp  OutputConfig.cpp  ParticleGunConfig.cpp  PhysicsConfig.cpp  SceneGraph.cpp  Serialization.cpp  Shape.cpp  Transform.cpp  VolumeNode.cpp
docs/: AGENT_TASKS.md  COORDINATION.md  GEANT4_REFERENCE.md  GUI_REDESIGN.md  GUI_REDESIGN_STATUS.md  MODERNIZATION_STATUS.md  PANEL_REORGANIZATION.md  QT6_MIGRATION.md  README.md
generator/bindings/: pybind11_wrapper.cpp
generator/include/: GDMLExporter.hh  Geant4ProjectGenerator.hh  MeshExporter.hh  TemplateEngine.hh
generator/src/: GDMLExporter.cpp  Geant4ProjectGenerator.cpp  MeshExporter.cpp  TemplateEngine.cpp
scripts/: build_vtk_qt6.sh
templates/geant4_project/: ActionInitialization.cc.template  ActionInitialization.hh.template  CMakeLists.txt.template  CalorimeterHit.cc.template  CalorimeterHit.hh.template  CalorimeterSD.cc.template  CalorimeterSD.hh.template  DetectorConstruction.cc.template  DetectorConstruction.hh.template  EventAction.cc.template  EventAction.hh.template  OpticalHit.cc.template  OpticalHit.hh.template  OpticalSD.cc.template  OpticalSD.hh.template  PhysicsList.cc.template  PhysicsList.hh.template  PrimaryGeneratorAction.cc.template  PrimaryGeneratorAction.hh.template  README.md.template  RunAction.cc.template  RunAction.hh.template  SteppingAction.cc.template  SteppingAction.hh.template  TrackerHit.cc.template  TrackerHit.hh.template  TrackerSD.cc.template  TrackerSD.hh.template  main.cc.template  run.mac.template  vis.mac.template
